--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -436,9 +436,10 @@ sharp corners
 \input{chap1/1_zariski_topology.tex}
 \input{chap1/2_algebraic_sets.tex}
 \input{chap1/3_sheaves.tex}
+\input{chap1/3-1_Bsheaf.tex}
 \input{chap1/4_ringed_topological_space.tex}
 \input{chap1/5_schemes.tex}
-\input{chap1/6_morphism_of_schemes.tex}
+\input{chap1/5-1_morphism_of_schemes.tex}
 
 \clearpage
 \appendix
