--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -3,6 +3,7 @@
 
 % 数式
 \usepackage{amsmath,amsfonts}
+\usepackage[mathcal]{euscript}
 \usepackage{mathtools}
 \usepackage{xcolor}
 \usepackage{xcoffins,calc}
@@ -14,6 +15,7 @@
 \usepackage{titlesec}
 \usepackage{ifthen}
 \usepackage{mathrsfs}
+\usepackage[scr]{rsfso}
 
 % 画像
 % \usepackage[dvipdfmx]{graphicx,color}
