stalkについて補足

--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -16,6 +16,7 @@
 \usepackage{ifthen}
 \usepackage{mathrsfs}
 \usepackage[scr]{rsfso}
+\usepackage{relsize}
 
 % 画像
 % \usepackage[dvipdfmx]{graphicx,color}
