--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -389,6 +389,7 @@ sharp corners
 \newcommand{\coker}[1]{\mathrm{Coker}\, #1}
 \renewcommand{\hom}[3]{\mathrm{Hom}_{#1}(#2,#3)}
 \newcommand{\spec}[1]{\mathrm{Spec}\, #1}
+\newcommand{\proj}[1]{\mathrm{Proj}\, #1}
 
 \makeindex
 
@@ -444,11 +445,11 @@ sharp corners
 \input{chap1/4_ringed_topological_space.tex}
 \input{chap1/5_schemes.tex}
 \input{chap1/5-1_morphism_of_schemes.tex}
+\input{chap1/5-2_projective_schemes.tex}
 
 \clearpage
 \appendix
 \chapter{Limit}
 \input{appendix/1_limit/1_inductive_limit.tex}
-
 \printindex
 \end{document}
