--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -446,10 +446,13 @@ sharp corners
 \input{chap1/5_schemes.tex}
 \input{chap1/5-1_morphism_of_schemes.tex}
 \input{chap1/5-2_projective_schemes.tex}
+\input{chap1/5-3_noetherian_schemes_algebraic_varieties.tex}
 
 \clearpage
 \appendix
 \chapter{Limit}
 \input{appendix/1_limit/1_inductive_limit.tex}
+\chapter{Complex Analysis}
+\input{appendix/2_complex_analysis/1_holomorphic_function.tex}
 \printindex
 \end{document}
