--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -454,5 +454,6 @@ sharp corners
 \input{appendix/1_limit/1_inductive_limit.tex}
 \chapter{Complex Analysis}
 \input{appendix/2_complex_analysis/1_holomorphic_function.tex}
+\input{appendix/2_complex_analysis/2_line_integral.tex}
 \printindex
 \end{document}
