--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -39,7 +39,9 @@ pdfkeywords={}
 
 \usepackage{pxjahyper}
 \usepackage{tikz}
-\usetikzlibrary{intersections,calc,arrows.meta}
+\usetikzlibrary{intersections,calc,arrows.meta,arrows}
+\usetikzlibrary{hobby}
+\usetikzlibrary{decorations.markings}
 \usepackage[truedimen,top=25truemm,bottom=30truemm,hmargin=25truemm]{geometry}
 \usepackage{calc}
 \usepackage{fancyhdr}
@@ -457,5 +459,7 @@ sharp corners
 \input{appendix/2_complex_analysis/1_holomorphic_function.tex}
 \input{appendix/2_complex_analysis/2_line_integral.tex}
 \input{appendix/2_complex_analysis/3_cauchy's_integral_theorem.tex}
+\input{appendix/2_complex_analysis/4_cauchy's_integral_formula.tex}
+\input{appendix/2_complex_analysis/5_residue_theorem.tex}
 \printindex
 \end{document}
