--- a/appendix/2_complex_analysis/3_cauchy's_integral_theorem.tex
+++ b/appendix/2_complex_analysis/3_cauchy's_integral_theorem.tex
@@ -28,6 +28,16 @@ $T$の境界$\partial T$は閉曲線として$a\to b \to c \to a$と各辺上を
 }{
   後で書く．
 }
+一般に$[a,b] \to [0,1]$で$x\mapsto $
+\Definition{
+  曲線$\gamma_{0},\gamma_{1}$が領域$D$内で\index{ほもとーぷ@ホモトープ}\index{homotopic}
+  \textbf{ホモトープ(ホモトピック)(homotopic)}とは，
+  $c_{j}:[a_{j},b_{j}] \to D\ (j = 0,1)$が$\gamma_{j}$のパラメーター付けだとする．これが始域が$[0,1]$となる曲線と同値なとき，
+  次が成立することである．
+  \begin{itemize}
+    \item[(1)] 
+  \end{itemize}
+}
 
 \Theorem{
   領域$D$内で，始点$w_{0}\in D$，終点$w_{1} \in D$を共有する二つの曲線$\gamma,\gamma'$
@@ -36,3 +46,32 @@ $T$の境界$\partial T$は閉曲線として$a\to b \to c \to a$と各辺上を
     \int_{\gamma}f(z)dz = \int_{\gamma'}f(z)dz
   \end{equation}
 }{}
+\begin{center}
+\begin{tikzpicture}
+  % 曲線上に矢印を追加 (赤の曲線)
+  \draw[red, 
+        thick, 
+        postaction={decorate}, 
+        decoration={markings, 
+                    mark=at position 0.3 with {\arrow{>}},
+                    mark=at position 0.8 with {\arrow{>}}
+                    }
+        ]
+    (0,0) to[out=80, in=130, curve through={(1,1) (2,1)}] (3,2) node[left] at (1.5,1.5) {$\gamma$};
+  
+  % 曲線上に矢印を追加 (青の曲線)
+  \draw[blue,
+        thick,
+        postaction={decorate},
+        decoration={markings,
+                    mark=at position 0.3 with {\arrow{>}},
+                    mark=at position 0.7 with {\arrow{>}}
+                    }
+        ]
+    (0,0) to[out=-10, in=-30, curve through={(1,-0.5) (1.5,0) (2,0.7) (3.5,1.5)}] (3,2) node[right] at (2,0.2) {$\gamma'$};
+  
+  % 点の描画
+  \fill (0,0) circle (0.6mm) node[left] {$w_{0}$};
+  \fill (3,2) circle (0.6mm) node[right] at (3,2.1) {$w_{1}$};
+\end{tikzpicture}
+\end{center}
