--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -42,6 +42,7 @@ pdfkeywords={}
 \usetikzlibrary{intersections,calc,arrows.meta,arrows}
 \usetikzlibrary{hobby}
 \usetikzlibrary{decorations.markings}
+\usepackage{wrapfig}
 \usepackage[truedimen,top=25truemm,bottom=30truemm,hmargin=25truemm]{geometry}
 \usepackage{calc}
 \usepackage{fancyhdr}
