--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -450,6 +450,7 @@ sharp corners
 \input{chap1/5-1_morphism_of_schemes.tex}
 \input{chap1/5-2_projective_schemes.tex}
 \input{chap1/5-3_noetherian_schemes_algebraic_varieties.tex}
+\input{chap1/5-4_reduced_schemes.tex}
 
 
 \clearpage
@@ -462,5 +463,6 @@ sharp corners
 \input{appendix/2_complex_analysis/3_cauchy's_integral_theorem.tex}
 \input{appendix/2_complex_analysis/4_cauchy's_integral_formula.tex}
 \input{appendix/2_complex_analysis/5_residue_theorem.tex}
+\input{appendix/2_complex_analysis/6_several_variables.tex}
 \printindex
 \end{document}
