--- a/algebraic_geometry.tex
+++ b/algebraic_geometry.tex
@@ -440,29 +440,34 @@ sharp corners
 \clearpage
 %--------------------本文--------------------%
 
+
+
 \chapter{Scheme}
-\input{chap1/1_zariski_topology.tex}
-\input{chap1/2_algebraic_sets.tex}
-\input{chap1/3_sheaves.tex}
-\input{chap1/3-1_Bsheaf.tex}
-\input{chap1/4_ringed_topological_space.tex}
-\input{chap1/5_schemes.tex}
-\input{chap1/5-1_morphism_of_schemes.tex}
-\input{chap1/5-2_projective_schemes.tex}
-\input{chap1/5-3_noetherian_schemes_algebraic_varieties.tex}
-\input{chap1/5-4_reduced_schemes.tex}
+\input{chap2/1_zariski_topology.tex}
+\input{chap2/2_algebraic_sets.tex}
+\input{chap2/3_sheaves.tex}
+\input{chap2/3-1_Bsheaf.tex}
+\input{chap2/4_ringed_topological_space.tex}
+\input{chap2/5_schemes.tex}
+\input{chap2/5-1_morphism_of_schemes.tex}
+\input{chap2/5-2_projective_schemes.tex}
+\input{chap2/5-3_noetherian_schemes_algebraic_varieties.tex}
+\input{chap2/5-4_reduced_schemes.tex}
 
 
 \clearpage
 \appendix
 \chapter{Limit}
 \input{appendix/1_limit/1_inductive_limit.tex}
+
+\chapter{Manifold}
+\input{appendix/2_manifold/1_smooth_manifold.tex}
 \chapter{Complex Analysis}
-\input{appendix/2_complex_analysis/1_holomorphic_function.tex}
-\input{appendix/2_complex_analysis/2_line_integral.tex}
-\input{appendix/2_complex_analysis/3_cauchy's_integral_theorem.tex}
-\input{appendix/2_complex_analysis/4_cauchy's_integral_formula.tex}
-\input{appendix/2_complex_analysis/5_residue_theorem.tex}
-\input{appendix/2_complex_analysis/6_several_variables.tex}
+\input{appendix/3_complex_analysis/1_holomorphic_function.tex}
+\input{appendix/3_complex_analysis/2_line_integral.tex}
+\input{appendix/3_complex_analysis/3_cauchy's_integral_theorem.tex}
+\input{appendix/3_complex_analysis/4_cauchy's_integral_formula.tex}
+\input{appendix/3_complex_analysis/5_residue_theorem.tex}
+\input{appendix/3_complex_analysis/6_several_variables.tex}
 \printindex
 \end{document}
